syntax = "proto3";

package auth;

option go_package = "sut-auth-go/proto/auth";

import "auth/auth_enum.proto";

message UserRegisterRequest {
    string id = 1;
    string username = 2;
    string name = 3;
    string password = 4;
    Role role = 5;
    string adminId = 6;
}

message UserRegisterResponse {
    int64 status = 1;
    string error = 2;
}

message AdminRegisterResponse {
    int64 status = 1;
    string error = 2;
}

message AdminRegisterRequest {
    string id = 1;
    string username = 2;
    string name = 3;
    string password = 4;
    Role role = 5;
    string adminKey = 6; 
}

message AuthenticateRequest {
    string token = 1;
}

message AuthenticateResponse {
    int64 status = 1;
    string error = 2;
    string id = 3;
    string username = 4;
    string name = 5;
    Role role = 6;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}






